
0.9 (2019.10.04) Almost there
- first release with changelog - all previous releases are only "git commit" documented
- add power meter support

0.8
- polished web interface
- switch to tasks
- exteded safety features
- introduced logs

0.7
- initial fully functional release