@@ -52,9 +52,10 @@
 	<label for="WiFi_Mode"> WiFi Mode </label>
       </div>
       <div class="col-75">
-	<input type="radio" name="WiFi_Mode" value="0" ~WiFi_Mode0~> 0 - connect to AP - if failed, be AP<br>
-	<input type="radio" name="WiFi_Mode" value="1" ~WiFi_Mode1~> 1 - connect only to AP (default) <br>
-	<input type="radio" name="WiFi_Mode" value="2" ~WiFi_Mode2~> 2 - be only AP<br>
+	<input type="radio" name="WiFi_Mode" value="0" ~WiFi_Mode0~> 0 - no WiFi<br>
+	<input type="radio" name="WiFi_Mode" value="1" ~WiFi_Mode0~> 1 - connect to AP - if failed, be AP (default)<br>
+	<input type="radio" name="WiFi_Mode" value="2" ~WiFi_Mode1~> 2 - connect only to AP<br>
+	<input type="radio" name="WiFi_Mode" value="3" ~WiFi_Mode2~> 3 - be only AP<br>
       </div>
      </div>
      <div class="row">
@@ -226,7 +227,7 @@
     </div>
   </form>
  </div>
- <div>You can also <a href="/etc/pidkiln.conf">download</a> current pidkiln.conf file.</div>
+ <div>You can also <a href="/etc/pidkiln.conf" target="_blank">download</a> current /etc/pidkiln.conf file.</div>
 <br>
 
 </body>
