@@ -2,11 +2,13 @@
 0.9 (2019.10.04) Almost there
 - first release with changelog - all previous releases are only "git commit" documented
 - add power meter support
+- add AP mode for WiFi (already planed before - just implemented it) - in prefs user can choose between Client mode, AP mode or fail safe mode
+- created printable box case for PIDKiln (https://www.thingiverse.com/thing:3907643)
 
 0.8
 - polished web interface
 - switch to tasks
-- exteded safety features
+- extended safety features
 - introduced logs
 
 0.7
